--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropdown": "^1.11.0"
   }
 }
